<resources>
    <string name="app_name">GUUTT</string>
    <string name="main">Главная</string>
    <string name="settings">Настройки</string>
    <string name="lz">ЛЗ</string>
    <string name="program_engineering">Программная инженерия</string>
    <string name="classroom_example">ЛЗ-106</string>
    <string name="edward_snowden">Эдвард Сноуден</string>
    <string name="time_template">11:35-13:05</string>
    <string name="lesson">Предмет</string>
    <string name="professor_name">Имя профессора</string>
    <string name="classroom">Кабинет</string>
    <string name="type">Тип</string>
    <string name="sign_in">Войти</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="captcha">Код с картинки</string>
    <string name="no_classes_today">Сегодня нет пар</string>
    <string name="not_classes_at_this_day">В этот день нет пар</string>
    <string name="news">Новости</string>
    <string name="search">Поиск</string>
    <string name="date_template">Понедельник, 4 сентября 2023</string>
    <string name="class_type_example">Практическое занятие</string>
    <string name="time_example_first">11:35</string>
    <string name="day_of_week_example">ВТ</string>
    <string name="day_of_month_example">25</string>
    <string name="time">Время</string>
    <string name="classes">Пары</string>
    <string name="lecture">Лекция</string>
    <string name="laboratory_session">Лабораторная работа</string>
    <string name="practical_session">Практическое занятие</string>
    <string name="exam">Экзамен</string>
    <string name="credit_exam">Зачет</string>
    <string name="project">КП</string>
    <string name="choose_another_group">Выбрать другую группу</string>
    <string name="open_guu_website">Открыть сайт ГУУ</string>
    <string name="department">Кафедра:</string>
    <string name="department_example">Информационных систем</string>
    <string name="building_example">Бизнес центр</string>
    <string name="building">Здание:</string>
    <string name="noty">Заметочка</string>
    <string name="university_class">Предмет:</string>
</resources>