<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingHorizontal="28dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/time_start"
            style="@style/PoppinsFontThemeMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/time_example_first"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/time_end"
            style="@style/PoppinsFontThemeMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/time_example_first"
            android:textColor="@color/grey"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:background="@color/class_divider_color" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/blue_2"
        app:cardCornerRadius="16dp"
        app:contentPadding="16dp"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/class_title"
                style="@style/PoppinsFontThemeSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/program_engineering"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/class_type"
                style="@style/PoppinsFontThemeMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/class_type_example"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/classroom"
                style="@style/PoppinsFontThemeRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:drawablePadding="10dp"
                android:text="@string/classroom_example"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:drawableStartCompat="@drawable/ic_location_point"
                app:drawableTint="@color/white" />

            <TextView
                android:id="@+id/class_professor_name"
                style="@style/PoppinsFontThemeRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:text="@string/professor_name"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:drawableStartCompat="@drawable/round_account_circle_16"
                app:drawableTint="@color/white" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>